pagination, authentication, lazylaoding, profile page, navbar
Pagination size reduced to Medium
Authentication for login
Dynamic button navbar (based on user / non-user)
lazyloading & fallback setup - introduced only to Main
Profile Page for users

--- a/src/components/mainComponent/Main.css
+++ b/src/components/mainComponent/Main.css
@@ -1,4 +1,4 @@
 .Main{
     height: 100%;
-    background-color: rgb(214, 168, 212) ;
+    background: linear-gradient(0.25turn,#e66465, #9198e5);
 }
