--- a/src/components/loginComponent/Login.css
+++ b/src/components/loginComponent/Login.css
@@ -1,4 +1,4 @@
 .login{
-    background-color: rgb(214, 168, 212) ;
+    background: linear-gradient(0.25turn,#e66465, #9198e5);
     height: 100vh;
 }
